apps/dev/ntfy/base-url.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
spec:
  template:
    spec:
      containers:
        - name: ntfy
